<resources>
    <string name="app_name" translatable="false">Animagia.pl</string>

    <string name="navigation_drawer_open">Otwórz pasek nawigacji</string>
    <string name="navigation_drawer_close">Zamknij pasek nawigacji</string>

    <string name="drawer_item_watch">Oglądaj</string>
    <string name="drawer_item_shop">Sklep</string>
    <string name="drawer_item_account">Konto</string>
    <string name="drawer_item_downloads">Pliki</string>
    <string name="drawer_item_contact_info">Kontakt</string>
    <string name="drawer_item_misc_info">Informacje</string>

    <string name="title_activity_fullscreen_playback">Wideo</string>
    <string name="nav_section_company">Wydawnictwo</string>
    <string name="contact_info">Kontakt</string>
    <string name="documents">Informacje</string>
    <string name="terms">Regulamin</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="title_activity_document">DocumentActivity</string>

    <string name="prompt_email">Adres e-mail</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Logowanie</string>
    <string name="action_sign_out">Wyloguj się</string>
    <string name="guest">Gość</string>
    <string name="no_connection_message">Brak połączenia z Internetem. Sprawdź połączenie i spróbuj ponownie.</string>
    <string name="no_connection_short">Brak połącznia z Internetem</string>
    <string name="error_fetching_catalog">Sprawdź połączenie z Internetem</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="turn_on_internet">Włącz internet</string>
    <string name="not_logged">Nie zalogowano na konto</string>
    <string name="login_error">Błąd logowania</string>
    <string name="logged_out">Wylogowano</string>
    <string name="wrong_credentials">Nieprawidłowe dane logowania</string>
    <string name="no_account_needed">Nasza aplikacja nie wymaga zakładania konta.\n
        Dokonane zakupy będą widoczne tutaj,\notrzymasz też kody aktywacyjne na mail
    powiązany\nz płatnością, dzięki czemu nic nie przepadnie.</string>
    <string name="no_account_needed_short">Żeby oglądać anime dostępne bezpłatnie,
        nie musisz zakładać konta.</string>
    <string name="have_locally_purchased_anime">Masz anime zakupione w aplikacji:%1$s</string>
    <string name="can_bind_anime_to_account">Możesz powiązać je z kontem
        dla wygodnego dostępu z innych urządzeń.</string>
    <string name="bind_to_new_account">Załóż konto i powiąż</string>
    <string name="bind_to_existing_account">Powiąż z istniejącym kontem</string>
    <string name="bind_to_account">Powiąż z kontem</string>

    <string name="concise_info">Korzystanie z naszej aplikacji bez logowania się na konto
        nie wymaga akceptacji regulaminu, w takim przypadku nie zbieramy też
        żadnych danych osobowych. Jeśli zalogujesz się na konto założone wcześniej
        na naszej stronie, obowiązują regulamin i polityka prywatności i ciasteczek
        zaakceptowane na stronie.</string>

    <string name="documents_into">Poniższe dokumenty
        otworzą się w przeglądarce internetowej:</string>

    <string name="free_streaming_message">Bezpłatny streaming ma ograniczony czas oglądania.
        Żeby obejrzeć całość, kup cyfrową kopię lub załóż konto premium.</string>

    <string name="return_from_dialog">Powrót</string>
    <string name="continue_from_dialog">Dalej</string>

    <string name="start_iap">"Kontynuuj zakup z wykorzystaniem płatności Google Play."</string>
    <string name="buy_for_some_PLN">Kup za %1$s</string>
    <string name="already_bought">Kupione</string>Kup za %1$s
    <string name="new_account">Nowe konto</string>
    
    <string name="acceptance">Akceptuję <a href="https://animagia.pl/regulamin">regulamin</a>
        i <a href="https://animagia.pl/privacy">politkę prywatności</a></string>
    <string name="create_and_bind_account">Załóż konto</string>

    <string name="product_details_voiceover">• 1080p\n• napisy\n• lektor\n• %1$s</string>
    <string name="product_details_sub">• 1080p\n• napisy\n• %1$s</string>
    <string name="product_details_dub">• 1080p\n• napisy\n• dubbing\n• %1$s</string>

    <string name="sale_terms">Anime możesz ściągnąć, zachować na zawsze i oglądać także poza aplikacją.
        Zapewniamy możliwość ściągnięcia (i streamowania) przez przynajmniej 35 dni od zakupu. Otrzymasz też kod, który można powiązać
        z kontem dla wygodnego dostępu z innych urządzeń.</string>
    
    <string name="something_went_wrong_try_again">Coś poszło nie tak. Spróbuj ponownie.</string>

    <string name="only_subtitles_available">Bezpłatny podgląd ma tylko napisy</string>

    <string name="account_status_label">Konto premium:</string>

    <string name="purchase_full_film">Kup pełną wersję filmu:</string>

    <string name="product_details_button">Szczegóły</string>

    <string name="reopen_to_watch_all">Otwórz ponownie, żeby obejrzeć pełną wersję.</string>

</resources>
