<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/first" >
        <item
            android:id="@+id/nav_watch"
            android:icon="@drawable/ic_video_library"
            android:title="@string/drawer_item_watch"/>
        <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_shopping_basket"
                android:title="@string/drawer_item_shop"/>
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_file_download"
            android:title="@string/drawer_item_downloads"/>
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_box"
                android:title="@string/drawer_item_account"/>
    </group>

            <group android:checkableBehavior="single"
                android:id="@+id/second">
            <item
                    android:id="@+id/nav_contact_info"
                    android:icon="@drawable/ic_mail_outline"
                    android:title="@string/contact_info"/>
            <item
                    android:id="@+id/nav_documents"
                    android:icon="@drawable/ic_info_outline"
                    android:title="@string/documents"/>
            <item
                    android:id="@+id/nav_terms_and_conditions"
                    android:icon="@drawable/ic_info_outline"
                    android:title="@string/terms" />
            </group>



</menu>
