<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/productsPurchasedLocallyHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_locally_purchased_anime"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        app:layout_constraintBottom_toTopOf="@+id/productsCanBeBoundHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@id/productsCanBeBoundHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/can_bind_anime_to_account"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        app:layout_constraintBottom_toTopOf="@+id/bindToNewAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productsPurchasedLocallyHint"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="56dp"/>

    <Button
        android:id="@id/bindToNewAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_to_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productsCanBeBoundHint"
        app:layout_constraintBottom_toBottomOf="@+id/bindToExistingAccountButton"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/lowProfileButton"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@id/bindToExistingAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_to_existing_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bindToNewAccountButton"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/lowProfileButton"
        android:layout_marginTop="4dp"/>


</android.support.constraint.ConstraintLayout>