<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/general_purpose_dialog_width"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acceptance" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceptance"
                android:id="@+id/acceptance_label"/>
        </LinearLayout>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/errorMessage"
            android:textColor="?attr/colorError"
            android:layout_weight="1"/>-->

        <Button
            android:id="@+id/creation_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_and_bind_account"
            android:textStyle="bold"
            android:enabled="false"
            />

        <!--<ProgressBar-->
            <!--style="?android:attr/progressBarStyle"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="117dp"-->
            <!--android:id="@+id/progressBar" android:visibility="gone"/>-->
    </LinearLayout>

</ScrollView>